--- a/stagesmart.ai/package.json
+++ b/stagesmart.ai/package.json
@@ -1,54 +1,39 @@
 {
-  "name": "react-example",
+  "name": "stagesmart",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx server.ts",
+    "dev": "vite",
     "build": "vite build",
-    "start": "node server.ts",
-    "test": "vitest run",
-    "test:watch": "vitest",
     "preview": "vite preview",
-    "clean": "rm -rf dist",
     "lint": "tsc --noEmit"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.37.0",
     "@google/genai": "^1.29.0",
     "@tailwindcss/vite": "^4.1.14",
+    "@vercel/node": "^5.0.0",
     "@vitejs/plugin-react": "^5.0.4",
-    "better-sqlite3": "^12.4.1",
     "clsx": "^2.1.1",
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
-    "express": "^4.21.2",
+    "formidable": "^3.5.2",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
-    "multer": "^2.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^15.0.0",
     "react-router-dom": "^7.13.1",
+    "replicate": "^1.0.1",
     "stripe": "^20.3.1",
     "tailwind-merge": "^3.5.0",
-    "uuid": "^13.0.0",
     "vite": "^6.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.2",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/multer": "^2.0.0",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^22.14.0",
-    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
-    "jsdom": "^28.1.0",
     "tailwindcss": "^4.1.14",
-    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
     "vitest": "^4.0.18"
   }
 }
